--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         wget https://github.com/jepsen-io/maelstrom/releases/download/v0.2.3/maelstrom.tar.bz2
         tar -tf maelstrom.tar.bz2
-        ls -la
+        echo "MAELSTROM_BIN_PATH=$(realpath maelstrom)" > .env
         make dev-install
     - name: Run lint
       run: |
