fix: testing CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,14 +32,14 @@ jobs:
         wget https://github.com/jepsen-io/maelstrom/releases/download/v0.2.3/maelstrom.tar.bz2
         tar -tf maelstrom.tar.bz2
         echo "MAELSTROM_BIN_PATH=$(realpath maelstrom)" > .env
-        ls -la
+        ls -la maelstrom
         make dev-install
     - name: Run lint
       run: |
         pre-commit run --all-files
     - name: Test echo
       run: |
-        ls -la
+        ls -la maelstrom
         make test-echo
     - name: Test broadcast
       run: |
