--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Install dependencies
       run: |
         wget https://github.com/jepsen-io/maelstrom/releases/download/v0.2.3/maelstrom.tar.bz2
+        mkdir maelstrom-java
         tar -xvf maelstrom.tar.bz2 -C maelstrom-java
         echo "MAELSTROM_BIN_PATH=$(realpath maelstrom-java)" > .env
         make dev-install
