--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
         wget https://github.com/jepsen-io/maelstrom/releases/download/v0.2.3/maelstrom.tar.bz2
         mkdir maelstrom-java
         tar -xvf maelstrom.tar.bz2 -C maelstrom-java
+        chmod +x maelstrom-java/maelstrom
         echo "MAELSTROM_BIN_PATH=$(realpath maelstrom-java)" > .env
         make dev-install
     - name: Run lint
